<?xml version="1.0"?>
<package format="2">
  <name>reachability_map_visualizer_sample</name>
  <version>0.0.0</version>
  <description>The reachability_map_visualizer_sample package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>reachability_map_visualizer</depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_viewer</depend>
  <depend>jvrc_models</depend>
  <depend>manta_models</depend>

</package>
